- Added descriptions to settings - Fixed disabled smooth transitions - Settings are always white now for readability

--- a/src/main/resources/static/design/style.css
+++ b/src/main/resources/static/design/style.css
@@ -69,7 +69,7 @@ a:hover {
     opacity: 1 !important;
 }
 
-body.transition * {
+#main:not(.disable-transitions) * {
     transition: opacity var(--transition),
         color var(--transition),
         background-color var(--transition),
@@ -116,7 +116,7 @@ img:not([src]) {
 }
 
 #main.blur {
-    filter: blur(var(--blur));
+    filter: blur(var(--blur)) brightness(0.5);
 }
 
 #main.maximum-artwork:not(.vertical) {
@@ -606,7 +606,7 @@ div#description {
     opacity: 0.5;
 }
 
-#content-center:not(.queue) #track-list:not(.scaling) .track-elem:not(.disc) div {
+#main:not(.disable-transitions) #content-center:not(.queue) #track-list:not(.scaling) .track-elem:not(.disc) div {
     transition: font-size var(--transition), opacity var(--transition);
 }
 
@@ -626,8 +626,8 @@ div#description {
     will-change: opacity, font-size;
 }
 
-#content-center.queue #track-list .track-elem:first-child div.shrink,
-#content-center.queue #track-list .track-elem:nth-child(n+20) > div {
+#main:not(.disable-transitions) #content-center.queue #track-list .track-elem:first-child div.shrink,
+#main:not(.disable-transitions) #content-center.queue #track-list .track-elem:nth-child(n+20) > div {
     transition: opacity var(--transition), font-size var(--transition);
     opacity: 0;
     font-size: 0;
@@ -691,7 +691,7 @@ div#description {
     display: none;
 }
 
-#artists, #title, #description, #album, #context {
+#main:not(.disable-transitions) :is(#artists, #title, #description, #album, #context) {
     transition: opacity var(--transition), letter-spacing var(--transition);
     will-change: opacity, letter-spacing;
 }
@@ -804,8 +804,10 @@ div#description {
     border-radius: 0.5vh;
 }
 #volume-current {
-    transition: width var(--transition);
     width: var(--volume);
+}
+#main:not(.disable-transitions) #volume-current {
+    transition: width var(--transition);
 }
 #volume-background {
     opacity: 0.25;
@@ -852,7 +854,7 @@ div#device {
 
 #progress-current {
     --progress-speed: 250ms;
-    transition: width var(--progress-speed) linear, background-color var(--transition);
+    transition: width var(--progress-speed) linear, background-color var(--transition) !important;
     background-color: var(--color);
     width: 0;
     height: 100%;
@@ -961,7 +963,7 @@ div#device {
     mask-position: right;
     mask-repeat: no-repeat;
     opacity: 0;
-    background-color: var(--color);
+    background-color: white;
     z-index: 3;
     cursor: pointer;
     transition: opacity var(--transition), left var(--transition), transform var(--transition);
@@ -979,6 +981,8 @@ div#device {
 }
 
 #settings-wrapper {
+    color: white;
+    --color: white;
     width: 100%;
     height: 100%;
     z-index: 2;
@@ -1211,7 +1215,6 @@ div#device {
 #clock.hide, #clock:empty {
     display: none;
 }
-
 
 @media only screen and (max-aspect-ratio: 3/2) {
     #artwork {
